# devops-project

./: .release-please-manifest.json  mise.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  frontend-docker-build-push.yaml  frontend-tests.yaml  release-please.yaml
scripts/: setup  setup_project
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/src/backend/: main.py
src/backend/src/data/: sessions.csv
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
