[project]
name = "study-tracker-backend"
version = "0.2.3"
description = "Backend API for tracking study time for DevOps certifications"
readme = "README.md"
authors = [{ name = "Daniel Lindroth", email = "daniel.lindroth@noreply.org" }]
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.115.13",
 "uvicorn>=0.34.3",
]

[project.scripts]
study-tracker-api = "backend.main:main"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]
lint = ["ruff>=0.12.1"]
